Step 3: Address SecurityManager Deprecated API Usage. Build status: Success